--- a/index.html
+++ b/index.html
@@ -9,11 +9,9 @@
     <link rel='stylesheet' type='text/css' href='styles.css'>
     <script type="text/javascript" src="scripts/grid.js"></script>
     <script type="text/javascript" src="scripts/coordinates.js"></script>
-
+    <script type="text/javascript" src="scripts/hud.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/pixi.js@8.x/dist/pixi.min.js"></script>
-    <!-- <script type="text/javascript" src="scripts/bullet.js"></script> -->
-    <!-- <script type="text/javascript" src="scripts/bullet2.js"></script> -->
-    <script type="text/javascript" src="scripts/bullet3.js"></script>
+    <script type="text/javascript" src="scripts/bullet.js"></script>
     <script type="text/javascript" src="scripts/turret.js"></script>
     <script type="text/javascript" src="scripts/enemy.js"></script>
     <script type="text/javascript" src="app.js"></script>
