--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <script type="text/javascript" src="scripts/bullet.js"></script>
     <script type="text/javascript" src="scripts/turret.js"></script>
     <script type="text/javascript" src="scripts/enemy.js"></script>
+    <script type="text/javascript" src="scripts/grass.js"></script>
     <script type="text/javascript" src="app.js"></script>
     <script>
         window.onload = run;
