--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <script type="text/javascript" src="scripts/turret.js"></script>
     <script type="text/javascript" src="scripts/enemy.js"></script>
     <script type="text/javascript" src="scripts/grass.js"></script>
+    <script type="text/javascript" src="scripts/path.js"></script>
+    <script type="text/javascript" src="scripts/pane.js"></script>
     <script type="text/javascript" src="app.js"></script>
     <script>
         window.onload = run;
