--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     <script type="text/javascript" src="scripts/grass.js"></script>
     <script type="text/javascript" src="scripts/path.js"></script>
     <script type="text/javascript" src="scripts/pane.js"></script>
+    <script type="text/javascript" src="scripts/paneBtn.js"></script>
+
     <script type="text/javascript" src="app.js"></script>
     <script>
         window.onload = run;
