--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta charset='UTF-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1.0'>
     <link rel='stylesheet' type='text/css' href='styles.css'>
+    <script type="text/javascript" src="assets/spritesheetMappings.js"></script>
     <script type="text/javascript" src="scripts/grid.js"></script>
     <script type="text/javascript" src="scripts/coordinates.js"></script>
     <script type="text/javascript" src="scripts/hud.js"></script>
