--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/pixi.js@8.x/dist/pixi.min.js"></script>
     <script type="text/javascript" src="scripts/bullet.js"></script>
     <script type="text/javascript" src="scripts/tower.js"></script>
+    <script type="text/javascript" src="scripts/towerDetail.js"></script>
     <!-- <script type="text/javascript" src="scripts/turret.js"></script> -->
     <script type="text/javascript" src="scripts/enemy.js"></script>
     <script type="text/javascript" src="scripts/grass.js"></script>
