--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <script type="text/javascript" src="scripts/bullet.js"></script>
     <script type="text/javascript" src="scripts/tower.js"></script>
     <script type="text/javascript" src="scripts/towerDetail.js"></script>
+    <script type="text/javascript" src="scripts/towerRadius.js"></script>
     <!-- <script type="text/javascript" src="scripts/turret.js"></script> -->
     <script type="text/javascript" src="scripts/enemy.js"></script>
     <script type="text/javascript" src="scripts/grass.js"></script>
