--- a/index.html
+++ b/index.html
@@ -13,8 +13,11 @@
     <script type="text/javascript" src="scripts/hud.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/pixi.js@8.x/dist/pixi.min.js"></script>
     <script type="text/javascript" src="scripts/bullet.js"></script>
-    <script type="text/javascript" src="scripts/tower.js"></script>
-    <script type="text/javascript" src="scripts/towerDetail.js"></script>
+    <!-- <script type="text/javascript" src="scripts/tower.js"></script> -->
+    <script type="text/javascript" src="scripts/tower2.js"></script>
+    <!-- <script type="text/javascript" src="scripts/towerDetail.js"></script> -->
+    <script type="text/javascript" src="scripts/towerToolTip.js"></script>
+    <script type="text/javascript" src="scripts/towerCircle.js"></script>
     <script type="text/javascript" src="scripts/towerButton.js"></script>
     <!-- <script type="text/javascript" src="scripts/turret.js"></script> -->
     <script type="text/javascript" src="scripts/enemy.js"></script>
