--- a/index.html
+++ b/index.html
@@ -23,8 +23,12 @@
     <script type="text/javascript" src="scripts/enemy.js"></script>
     <script type="text/javascript" src="scripts/grass.js"></script>
     <script type="text/javascript" src="scripts/path.js"></script>
-    <script type="text/javascript" src="scripts/pane.js"></script>
-    <script type="text/javascript" src="scripts/paneBtn.js"></script>
+    <!-- <script type="text/javascript" src="scripts/pane.js"></script>
+    <script type="text/javascript" src="scripts/paneButton.js"></script>
+    <script type="text/javascript" src="scripts/paneLabel.js"></script> -->
+    <!-- <script type="text/javascript" src="scripts/paneBtn.js"></script> -->
+    <script type="text/javascript" src="scripts/menu.js"></script>
+    <script type="text/javascript" src="scripts/menuButton.js"></script>
 
     <script type="text/javascript" src="app.js"></script>
     <script>
