--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <!-- <script type="text/javascript" src="scripts/paneBtn.js"></script> -->
     <script type="text/javascript" src="scripts/menu.js"></script>
     <script type="text/javascript" src="scripts/menuButton.js"></script>
+    <script type="text/javascript" src="scripts/menuButtonLabel.js"></script>
 
     <script type="text/javascript" src="app.js"></script>
     <script>
