--- a/index.html
+++ b/index.html
@@ -7,26 +7,20 @@
     <meta charset='UTF-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1.0'>
     <link rel='stylesheet' type='text/css' href='styles.css'>
-    <script type="text/javascript" src="assets/spritesheetMappings.js"></script>
+    <script type="text/javascript" src="assets/spritesheetMappings-towers.js"></script>
+    <script type="text/javascript" src="assets/spritesheetMappings-roads.js"></script>
     <script type="text/javascript" src="scripts/grid.js"></script>
     <script type="text/javascript" src="scripts/coordinates.js"></script>
     <script type="text/javascript" src="scripts/hud.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/pixi.js@8.x/dist/pixi.min.js"></script>
     <script type="text/javascript" src="scripts/bullet.js"></script>
-    <!-- <script type="text/javascript" src="scripts/tower.js"></script> -->
-    <script type="text/javascript" src="scripts/tower2.js"></script>
-    <!-- <script type="text/javascript" src="scripts/towerDetail.js"></script> -->
+    <script type="text/javascript" src="scripts/tower.js"></script>
     <script type="text/javascript" src="scripts/towerToolTip.js"></script>
     <script type="text/javascript" src="scripts/towerCircle.js"></script>
     <script type="text/javascript" src="scripts/towerButton.js"></script>
-    <!-- <script type="text/javascript" src="scripts/turret.js"></script> -->
     <script type="text/javascript" src="scripts/enemy.js"></script>
     <script type="text/javascript" src="scripts/grass.js"></script>
     <script type="text/javascript" src="scripts/path.js"></script>
-    <!-- <script type="text/javascript" src="scripts/pane.js"></script>
-    <script type="text/javascript" src="scripts/paneButton.js"></script>
-    <script type="text/javascript" src="scripts/paneLabel.js"></script> -->
-    <!-- <script type="text/javascript" src="scripts/paneBtn.js"></script> -->
     <script type="text/javascript" src="scripts/menu.js"></script>
     <script type="text/javascript" src="scripts/menuButton.js"></script>
     <script type="text/javascript" src="scripts/menuButtonLabel.js"></script>
