--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <script type="text/javascript" src="scripts/menu.js"></script>
     <script type="text/javascript" src="scripts/menuButton.js"></script>
     <script type="text/javascript" src="scripts/menuButtonLabel.js"></script>
+    <script type="text/javascript" src="scripts/rounds.js"></script>
 
     <script type="text/javascript" src="app.js"></script>
     <script>
