--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel='stylesheet' type='text/css' href='styles.css'>
     <script type="text/javascript" src="assets/spritesheetMappings-towers.js"></script>
     <script type="text/javascript" src="assets/spritesheetMappings-roads.js"></script>
+    <script type="text/javascript" src="assets/spritesheetMappings-playPause.js"></script>
     <script type="text/javascript" src="scripts/grid.js"></script>
     <script type="text/javascript" src="scripts/coordinates.js"></script>
     <script type="text/javascript" src="scripts/hud.js"></script>
@@ -25,6 +26,7 @@
     <script type="text/javascript" src="scripts/menuButton.js"></script>
     <script type="text/javascript" src="scripts/menuButtonLabel.js"></script>
     <script type="text/javascript" src="scripts/rounds.js"></script>
+    <script type="text/javascript" src="scripts/explosion.js"></script>
 
     <script type="text/javascript" src="app.js"></script>
     <script>
