--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <script type="text/javascript" src="scripts/coordinates.js"></script>
     <script type="text/javascript" src="scripts/hud.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/pixi.js@8.x/dist/pixi.min.js"></script>
+    <!-- <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/pixi-filters@latest/dist/browser/pixi-filters.min.js"></script> -->
     <script type="text/javascript" src="scripts/bullet.js"></script>
     <script type="text/javascript" src="scripts/tower.js"></script>
     <script type="text/javascript" src="scripts/towerToolTip.js"></script>
