--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <script type="text/javascript" src="scripts/towerToolTip.js"></script>
     <script type="text/javascript" src="scripts/towerCircle.js"></script>
     <script type="text/javascript" src="scripts/towerButton.js"></script>
+    <script type="text/javascript" src="scripts/enemyToolTip.js"></script>
     <script type="text/javascript" src="scripts/enemy.js"></script>
     <script type="text/javascript" src="scripts/grass.js"></script>
     <script type="text/javascript" src="scripts/path.js"></script>
