--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-<!-- // https://pixijs.com/8.x/tutorials/getting-started#1 -->
-
 <!DOCTYPE html>
 <html lang='en'>
 
@@ -7,6 +5,9 @@
     <meta charset='UTF-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1.0'>
     <link rel='stylesheet' type='text/css' href='styles.css'>
+    <title>Tower Defense</title>
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
+
     <script type="text/javascript" src="assets/spritesheetMappings-towers.js"></script>
     <script type="text/javascript" src="assets/spritesheetMappings-roads.js"></script>
     <script type="text/javascript" src="assets/spritesheetMappings-playPause.js"></script>
@@ -35,7 +36,7 @@
         window.onload = run;
     </script>
 
-    <title>TD1</title>
+
 </head>
 
 <body>
