--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <script type="text/javascript" src="scripts/rounds.js"></script>
     <script type="text/javascript" src="scripts/explosion.js"></script>
     <script type="text/javascript" src="scripts/helper.js"></script>
+    <script type="text/javascript" src="scripts/gameOver.js"></script>
 
     <script type="text/javascript" src="app.js"></script>
     <script>
