--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
     <script type="text/javascript" src="scripts/enemyToolTip.js"></script>
     <script type="text/javascript" src="scripts/enemy.js"></script>
     <script type="text/javascript" src="scripts/grass.js"></script>
-    <script type="text/javascript" src="scripts/path.js"></script>
+    <script type="text/javascript" src="scripts/newTile.js"></script>
+    <script type="text/javascript" src="scripts/newWorldLine.js"></script>
+    <script type="text/javascript" src="scripts/newWorld.js"></script>
+    <script type="text/javascript" src="scripts/drawRoad.js"></script>
     <script type="text/javascript" src="scripts/menu.js"></script>
     <script type="text/javascript" src="scripts/menuButton.js"></script>
     <script type="text/javascript" src="scripts/menuButtonLabel.js"></script>
