--- a/index.html
+++ b/index.html
@@ -39,12 +39,10 @@
     <script>
         window.onload = run;
     </script>
-
-
 </head>
 
 <body>
-
+    <a href="https://github.com/MichalKuracina" target="_blank" rel="noopener noreferrer" class="githublogo"><img src="assets/github-mark-white.png" alt="GitHub Pages"></a>
 </body>
 
 </html>
