--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
     <script type="text/javascript" src="scripts/explosion.js"></script>
     <script type="text/javascript" src="scripts/helper.js"></script>
     <script type="text/javascript" src="scripts/gameOver.js"></script>
+    <!--  <script type="text/javascript" src="scripts/bigHeart.js"></script> -->
+    <script type="text/javascript" src="scripts/plusHeart.js"></script>
 
     <script type="text/javascript" src="app.js"></script>
     <script>
